fixed issue with loginbox overflowing out page

--- a/designs/UI/css/style.css
+++ b/designs/UI/css/style.css
@@ -16,7 +16,7 @@ body{
 	transform: translate(-50%, -50%);
 	box-sizing: border-box;
 	background: rgba(0, 0, 0, .5);
-	padding: 25px 30px 10px;
+	padding: 25px 30px 20px;
 }
 .user{
 	width: 70px; /*80px*/
